# aruco

./: CMakeLists.txt  README.md
cmake/: findDependencies.cmake
mavlink/common/: common.h  mavlink_msg_sensor_data.h  testsuite.h  version.h
src/: CMakeLists.txt
utils/: CMakeLists.txt  MotionTracking.cpp  SearchMovement.cpp  arucoConfig.yml  aruco_estimate_position.cpp  aruco_imagem.cpp  aruco_test.cpp  aruco_tracker.cpp  aruco_video.cpp  myconnect.dict
utils/filecalibration/: calibration_1920x1080.yml  calibration_smartphone_1280x720.yml  calibration_smartphone_640x480.yml  camera_result_40_image.yml  camera_result_4_image.yml
utils_calibration/: CMakeLists.txt  aruco_calibration.cpp  aruco_calibration_fromimages.cpp
utils_markermap/: aruco_create_markermap.cpp
